customPolicy/pod2.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    mylabel: myapp
spec:
  affinity:
    nodeAffinity:
      requiredDuringSchedulingIgnoredDuringExecution:
        nodeSelectorTerms:
          - matchExpressions:
              - key: type
                operator: In
                values: ["protected"]
  containers:
  - name: myapp
    image: nginx
